--- a/SegmentedBarView/src/main/res/values/attrs.xml
+++ b/SegmentedBarView/src/main/res/values/attrs.xml
@@ -33,5 +33,8 @@
             <enum name="oneSided" value="0" />
             <enum name="twoSided" value="1" />
         </attr>
+
+        <attr name="sbv_progress_color" format="color" />
+        <attr name="sbv_progress_mode_enable" format="boolean" />
     </declare-styleable>
 </resources>
